Fix: Navbar menu center align fixed & logo display none size changed

--- a/front/style/navbar.css
+++ b/front/style/navbar.css
@@ -41,6 +41,10 @@
 .nav-menu {
   display: flex;
   gap: 2rem;
+
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .nav-link {
@@ -94,7 +98,7 @@
   display: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 590px) {
   .logo > span {
     display: none;
   }
